# modern-programming-tools-and-technologies

./: .gitmodules  README.md
.github/.workflow/: fractals.yml
.github/workflows/: 1.1.yml  1.2.yml  fractals.yml
00.Repository/: 0.1  0.2
01-IO_Flush/1.1/: task01  task01_2  task01_3  task01_4.txt
01-IO_Flush/1.2/: 1.2-report.md
01.IO_Flush/1.1/: 1.1-report.md  makefile  task01.c
01.IO_Flush/1.2/: 1.2-report.md  main.c  makefile  script.sh
02.Memory_Overcommit/: arrays2.c  memory_test.c  report.md
03.Fractal/: CMakeLists.txt  fractal.c  fractal.h  image.c  image.h  main.c  report.md  test_main.c
